--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,5 @@
+@import "headerMobile.css" screen and (max-width: 870px);
+
 *, ::before, ::after{
     margin: 0;
     padding: 0;
@@ -6,18 +8,18 @@
 	text-decoration: none;
 	scroll-behavior: smooth;
 }
+
 header{
     z-index: 1000;
     width: 100%;
     height: 12vh;
-    /* background-color:#5bcba7;    /* Change */
     background-color: transparent;
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: fixed;
     list-style: none;
-    padding-top: 70px;   /* Change */
+    padding-top: 70px;
     transition: all .5s;
 }
 
@@ -155,7 +157,6 @@ footer span{
 
 footer span:hover{
     text-decoration-line: underline;
-    /* text-decoration-style: wavy; */
     animation: mycan 0.1s infinite;
 }
 
@@ -217,9 +218,6 @@ footer span:hover{
 @keyframes mycan {
     50% {text-decoration-style: wavy;}
 }
-
-/* ------------------------------------------------------------------------------------------------------------------------------*/
-/* ------------------------------------------------------------------------------------------------------------------------------*/
 
 .projects{
     margin-top: 100px;
@@ -321,7 +319,7 @@ body > h1 span{padding: 1px 14px;
     }
 }
 
-@media only screen and (max-width: 798px) {
+@media only screen and (max-width: 870px) {
 
     header{
         padding-top: 0px;
@@ -329,21 +327,25 @@ body > h1 span{padding: 1px 14px;
         display: block;
         height: 7vh;
     }
+
     #menu{
-        height: 5vh;
+        height: 20px;
         margin-right: 30px;
         width: auto;
         display: block;
     }
+
     .headerMobile #logo{
         display: none;
     }
+
     .headerMobile #logo-noir{
         display: block;
-        height: 80%;
+        height: 50%;
         width: auto;
-        margin-left: 15px;
+        margin-left: 12px;
     }
+
     .container {
         height: auto;
         padding-bottom: 100px;
@@ -363,20 +365,9 @@ body > h1 span{padding: 1px 14px;
         height: 7vh;
     }
 
-    .canou{
-        width: 100vw;
-        min-height: 100vh;
-        display: grid;
-        grid-template-columns: 1;
-        row-gap: 40px;
-        background-color: white;
-        padding: 100px 300px 300px 100px;
-        background-color: #050a30;
-    }
-
     .canou a {
         color: #5bcba7;
-        font-size: 30px;
+        font-size: 25px;
         font-weight: bold;
     }
 
@@ -420,34 +411,13 @@ body > h1 span{padding: 1px 14px;
         row-gap: 5px;
     }
 
-    .navbar a {
-        font-size: 20px;
-    }
-
-    #menu{
-        height: 3.5vh;
-    }
-
     .headerMobile #logo-noir{
-        height: 55%;
+        height: 50%;
         margin-left: 12px;
-    }
-
-    header{
-        height: 9vh;
-    }
-
-    .headerMobile{
-        height: 9vh;
     }
 
     body > h1 {
         font-size: 30px;
-    }
-
-    .canou{
-        row-gap: 2px;
-        padding: 50px 50px 50vh 50px;
     }
 
     footer{
@@ -464,8 +434,7 @@ body > h1 span{padding: 1px 14px;
         width: 45px;
         height: 45px;
     }
-
-    
+ 
     .contact a img{
         width: 30px;
         height: 30px;
@@ -478,6 +447,7 @@ body > h1 span{padding: 1px 14px;
         height: 150vh;
         width: 135vw;
     }
+
     .canou{
         width: 150vw;
         height: 130vh;
