--- a/css/about.css
+++ b/css/about.css
@@ -1,124 +1,5 @@
-@import "headerMobile.css" screen and (max-width: 870px);
-
-*, ::before, ::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Jost', 'Poppins', sans-serif;
-	text-decoration: none;
-	scroll-behavior: smooth;
-}
-
-::-webkit-scrollbar {
-    width: 6px;
-}
-  
-::-webkit-scrollbar-track {
-    background: #050a30; 
-}
- 
-::-webkit-scrollbar-thumb {
-    background: #5bcba7; 
-}
-
-header{
-    z-index: 1000;
-    width: 100%;
-    height: 12vh;
-    background-color: transparent;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    list-style: none;
-    transition: all .5s;
-}
-
-header div img{
-    width: 10vw;
-    margin-left: 25px;
-}
-
-header > ul {
-    width: 55vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 20vw;
-    margin-right: 100px;
-    list-style: none;
-}
-
-.headerMobile{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.navbar a {
-    position: relative;
-    color: #5bcba7;
-    font-weight: bold;
-}
-
-.navbar a::after{
-	content: '';
-	width: 0;
-    position: absolute;
-	height: 3px;
-	background: #050a30;
-	bottom: -3px;
-	left: 0;
-	transition: ease .20s;
-}
-.navbar a:hover::after{
-	width: 100%;
-}
-
-#menu{
-    border-radius: 0;
-    display: none;
-}
-
-.headerMobile #logo-noir{
-    display: none;
-}
-
-button#lang {
-    border: 3px solid #050a30;
-    border-radius: 5px;
-    padding: 7px 20px;
-    background-color: #050a30;
-    color: white;
-    font-weight: bold ;
-}
-
-button#lang:hover {
-    background-color: transparent;
-    border: 3px solid #050a30;
-    color: #050a30;
-    cursor: pointer;
-}
-
-button#lang {
-    border: 3px solid #5bcba7;
-    color: #5bcba7;
-    border-radius: 5px;
-    padding: 7px 20px;
-    background-color: transparent;
-    font-weight: bold ;
-}
-
-button#lang:hover {
-    background-color: #050a30;
-    color: #ffffff;
-    cursor: pointer;
-}
-
-
-::selection {
-    background-color: #5bcba7;
-}
+@import "config.css";
+@import "about-projects.css";
 
 .container{
     display: flex;
@@ -131,15 +12,6 @@ button#lang:hover {
     color:#5bcba7;
     text-align: center;
     font-weight: 10;
-    
-}
-
-#menu{
-    display: none;
-}
-
-#logo-noir{
-    display: none;
 }
 
 .container div{
@@ -260,70 +132,12 @@ button#lang:hover {
 .title-bloc-formation ul{
     padding: 10px 0 0 20px;
 }
- 
-  /* --------------------------------------------------------------*/
-   
-  /* --------------------------------------------------------------*/
-   
-  /* --------------------------------------------------------------*/
 
-
-  
-.infos{
-    width: 80vw;
-    margin: auto;
-    text-align: center;
-    padding: 20px;
-}
-
-.essai{
-    position: relative;    /* A revoir pour la montée des 3 photos ! */
+.button {
+    display: none;
 }
 
 
-.photos {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    column-gap: 25px;
-    row-gap: 12px;
-    padding: 5px;
-}
-
-.photos img{
-    width: 100%;
-    box-shadow: 10px 10px 30px rgb(0, 0, 0, 0.5);
-}
-
-.img-text{
-    position: absolute;
-    width: 100%;
-    height: 100%;  
-    top:0;
-    left:0;
-    text-align: center;
-    transition: all 0.8s;
-}
-
-.img-text:hover{
-    background: linear-gradient(rgb(0, 0, 0, 0.3), #050a30);
-}
-
-.img-text h4{
-    position: absolute;
-    width: 100%;
-    color: white;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    transition: all 0.40s;
-}
-
-.img-text:hover h4{
-    opacity: 1;
-    bottom: 45%;
-}
-
-/* 
 .infos{
     width: 80vw;
     margin: auto;
@@ -338,7 +152,7 @@ button#lang:hover {
 
 .photos {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     column-gap: 25px;
     row-gap: 12px;
     padding: 5px;
@@ -376,70 +190,15 @@ button#lang:hover {
 .img-text:hover h4{
     opacity: 1;
     bottom: 45%;
-} */
- 
- 
-  /* --------------------------------------------------------------*/
-   
-  /* --------------------------------------------------------------*/
-  /* --------------------------------------------------------------*/
-
-#section2 h1{
-    font-size: 2.4rem;
-    text-align: center;
-    margin-bottom: 20px;
 }
-
-footer{
-    margin-top: 100px;
-    padding: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+ 
+.transition p{
     background-color: #050a30;
-    color: #ffffff;
-}
-
-.contact{
-    margin: 30px auto 60px;
-    width: 320px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.contact a{
-	width: 60px;
-	height: 60px;
-    border-radius: 50%;
-	display: inline-flex;
-    justify-content: center;
-    align-items: center;
-	background: #5bcba7;
-}
-
-.contact img{
-    width: 35px;
-    height:35px;
-}
-
-.contact a:hover{
-    background-color: bisque;
-    transform: scale(1.3);
-    transition: all 0.3s ease;
-}
-
-footer span{
-    text-decoration-line: underline;
-}
-
-footer span:hover{
-    text-decoration-line: none;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23453886' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-    background-position: bottom;
-    background-repeat: repeat-x;
-    background-size: 30%;
-    padding-bottom: .25em;
+    color: white;
+    font-size: 1rem;
+    text-align: center;
+    margin: 80px 25vw; 
+    padding: 40px;
 }
 
 .title-bloc-formation img{
@@ -500,40 +259,7 @@ footer span:hover{
     }
 }
 
-@media only screen and (max-width: 798px) {
-
-    ::-webkit-scrollbar {
-        width: 0;
-    }
-
-    header{
-        padding-top: 0px;
-        display: block;
-        height: 7vh;
-    }
-
-    #menu{
-        height: 20px;
-        margin-right: 30px;
-        width: auto;
-        display: block;
-    }
-
-    .headerMobile{
-        background-color: #5bcba7;
-        height: 7vh;
-    }
-
-    .headerMobile #logo{
-        display: none;
-    }
-
-    .headerMobile #logo-noir{
-        display: block;
-        height: 50%;
-        width: auto;
-        margin-left: 12px;
-    }
+@media only screen and (max-width: 870px) {
 
     .container {
         height: 90vh;
@@ -557,21 +283,6 @@ footer span:hover{
     
     .text div h1{
         font-size: 50px;
-    }
-
-    .canou a {
-        color: #5bcba7;
-        font-size: 25px;
-        font-weight: bold;
-    }
-
-    .navbarMask{
-        display: none;
-    }
-
-    button#lang:hover {
-        border: 3px solid #5bcba7;
-        color: #5bcba7;
     }
 
     .formation{
@@ -607,27 +318,6 @@ footer span:hover{
         font-size: 30px;
     }
 
-    footer{
-        width: 100%;
-        margin-top: 100px;
-        padding: 50px;
-    }
-    
-    .contact{
-        width: 80%;
-    }
-
-    .contact a{
-        width: 45px;
-        height: 45px;
-    }
-
-    
-    .contact a img{
-        width: 30px;
-        height: 30px;
-    }
-
     .formation{
         width: 100vw;
         gap: 10px;
@@ -642,16 +332,54 @@ footer span:hover{
     .specialites div{
         padding: 5px 0;
     }
-}
-
-@media only screen and (max-width: 290px) {
-
-    .container{
-        height: 150vh;
-        width: 135vw;
+ 
+    .button {
+        display: block;
+        width: 70vw;
+        position: absolute;
+        background-color: yellowgreen;
+        top: calc(50% - 20px);
     }
-    .canou{
-        width: 150vw;
-        height: 130vh;
+
+    .button img {
+        position: absolute;
+        width: 40px;
+        top: 50%;
+        opacity: 0.5;
+        z-index: 10;
+        background: white;
+    }
+
+    .button img:nth-of-type(1) {
+        left: 0;
+    }
+
+    .button img:nth-of-type(2) {
+        right: 0;
+    }
+
+    .infos{
+        position: relative;
+    }
+
+    .photos {
+        width: 70vw;
+        display: flex;
+        overflow: hidden;
+        border-radius: 12px;
+    }
+
+    .photos img{
+        width: 70vw;
+        z-index: -1;
+    }
+
+    .transition p{
+        background-color: #050a30;
+        color: white;
+        font-size: 1rem;
+        text-align: center;
+        margin: 80px 10vw; 
+        padding: 20px;
     }
 }
