--- a/css/index.css
+++ b/css/index.css
@@ -1,106 +1,29 @@
-@import "headerMobile.css" screen and (max-width: 870px);
-
-*, ::before, ::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Jost', 'Poppins', sans-serif;
-	text-decoration: none;
-	scroll-behavior: smooth;
-}
-
+@import "config.css";
 
 body{
     background-color: #050a30;
 }
 
 header{
-    width: 100%;
-    height: 10vh;
     background-color: #5bcba7;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    transition: all .5s;
-}
-
-header div img{
-    width: 10vw;
-    margin-left: 25px;
-}
-
-header > ul {
-    width: 55vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 20vw;
-    margin-right: 100px;
-    list-style: none;
-}
-
-.headerMobile{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .navbar a {
-    position: relative;
     color: #050a30;
     font-weight: bold;
 }
 
-.navbar a::after{
-	content: '';
-	width: 0;
-    position: absolute;
-	height: 3px;
-	background: #050a30;
-	bottom: -3px;
-	left: 0;
-	transition: ease .20s;
-}
-
-.navbar a:hover::after{
-	width: 100%;
-}
-
-#menu{
-    border-radius: 0;
-    display: none;
-}
-
-button#lang {
-    border: 3px solid #050a30;
-    border-radius: 5px;
-    padding: 7px 20px;
-    background-color: #050a30;
-    color: white;
-    font-weight: bold ;
-}
-
-button#lang:hover {
-    background-color: transparent;
-    border: 3px solid #050a30;
-    color: #050a30;
-    cursor: pointer;
-}
-
-
 .container-home{
     position: relative;
     background-image: url(../img/background-home.png);
-    background-size:100% 100%;
+    background-size: cover;
     height: 100vh;
     width: 100%;
-    animation: mymove 7s infinite;
 }
 
 .home-img img {
-    width: 230px;
-    height: 230px;
+    width: 200px;
+    height: 200px;
     border: 2px solid #5bcba7;
     border-radius: 50%;
     position: absolute;
@@ -109,8 +32,8 @@ button#lang:hover {
 }
 
 .home-img {
-    width: 234px;
-    height: 234px;
+    width: 205px;
+    height: 205px;
     margin-left: 140px;
     display: flex;
     justify-content: center;
@@ -127,7 +50,6 @@ button#lang:hover {
 .home-text{
     color: white;
     position: relative;
-    box-sizing: content-box;
 }
 
 .home-text h2{
@@ -158,7 +80,6 @@ button#lang:hover {
     justify-content: center;
     align-items: center;
 	background: #5bcba7;
-	font-size: 17px;
 }
 
 .social img{
@@ -186,14 +107,6 @@ button#lang:hover {
     cursor:help;
     background-color: bisque;
 }
-
-::selection {
-    background-color: #5bcba7;
-}
-
-@keyframes mymove {
-    50% {background-size: 101% 101%;}
-}  
 
 @keyframes anim-photo {
     50% {top: 36%;}
@@ -348,60 +261,11 @@ button#lang:hover {
         position: none;
         background-image: none;
         background-color: #050a30;
-        height: 100vh;
-        width: 100%;
         animation: none;
     }
 
-    header{
-        padding-top: 0px;
-        display: block;
-        height: 7vh;
-        margin: 0;
-    }
-
-    #menu{
-        height: 20px;
-        margin-right: 30px;
-        width: auto;
-        display: block;
-    }
-
-    .headerMobile #logo{
-        display: none;
-    }
-
-    .headerMobile #logo-noir{
-        display: block;
-        height: 50%;
-        width: auto;
-        margin-left: 12px;
-    }
-
-    .headerMobile{
-        background-color: #5bcba7;
-        height: 7vh;
-    }
-
-    button#lang {
-        background-color: transparent;
-        border: 2px solid #5bcba7;
+    .navbar a {
         color: #5bcba7;
-    }
-
-    button#lang:hover {
-        border: 2px solid #5bcba7;
-        color: #5bcba7;
-    }
-
-    .navbarMask{
-        display: none;
-    }
-
-    .canou a {
-        color: #5bcba7;
-        font-size: 25px;
-        font-weight: bold;
     }
 }
 
@@ -456,92 +320,7 @@ button#lang:hover {
 
 @media only screen and (max-width: 290px){
 
-    .home-img img {
-        width: 160px;
-        height: 160px;
-    }
-
     .home-text h1{
         font-size: 18px;
     }
-
-    .home-text h2{
-        font-size: 15px;
-    }
-
-    .home-text h3, .home-text h3 span{
-        font-size: 9px;
-    }
-
-    .home-text {
-        height: 150px;
-    }
-
-    .home-text span {
-        padding: 3px 7px;
-    }
-
-    .social{
-        width: 150px;
-    }
-    .social a {
-        width: 30px;
-        height: 30px;
-    }
-
-    .social a img {
-        width: 20px;
-        height: 20px;
-    }
-
-    .canou a {
-        font-size: 20px;
-    }
 }
-
-@media only screen and (max-width: 200px){
-
-    .home-img img {
-        width: 130px;
-        height: 130px;
-    }
-
-    .home-text h1{
-        font-size: 14px;
-    }
-
-    .home-text h2{
-        font-size: 11px;
-    }
-
-    .home-text h3, .home-text h3 span{
-        font-size: 7px;
-    }
-
-    .home-text {
-        height: 115px;
-    }
-
-    .home-text span {
-        font-size: 10px;
-        padding: 3px 7px;
-    }
-
-    .social{
-        width: 110px;
-    }
-
-    .social a {
-        width: 20px;
-        height: 20px;
-    }
-    
-    .social a img {
-        width: 12px;
-        height: 12px;
-    }
-}
-
-
-
-
