--- a/css/projects.css
+++ b/css/projects.css
@@ -1,167 +1,5 @@
-@import "headerMobile.css" screen and (max-width: 870px);
-
-*, ::before, ::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Jost', 'Poppins', sans-serif;
-	text-decoration: none;
-	scroll-behavior: smooth;
-}
-
-header{
-    width: 100%;
-    height: 12vh;
-    background-color: transparent;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    list-style: none;
-    padding-top: 70px;
-    transition: all .5s;
-}
-
-header div img{
-    width: 10vw;
-    margin-left: 25px;
-}
-
-header > ul {
-    width: 55vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 20vw;
-    margin-right: 100px;
-    list-style: none;
-}
-
-.headerMobile{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.navbar a {
-    color: #5bcba7;
-    font-weight: bold;
-}
-
-.navbar a {
-    position: relative;
-}
-
-.navbar a::after{
-	content: '';
-	width: 0;
-    position: absolute;
-	height: 3px;
-	background: #050a30;
-	bottom: -3px;
-	left: 0;
-	transition: ease .20s;
-}
-.navbar a:hover::after{
-	width: 100%;
-}
-
-#menu{
-    border-radius: 0;
-    display: none;
-}
-
-.headerMobile #logo-noir{
-    display: none;
-}
-
-button#lang {
-    border: 3px solid #050a30;
-    border-radius: 5px;
-    padding: 7px 20px;
-    background-color: #050a30;
-    color: white;
-    font-weight: bold ;
-}
-
-button#lang:hover {
-    background-color: transparent;
-    border: 3px solid #050a30;
-    color: #050a30;
-    cursor: pointer;
-}
-
-button#lang {
-    border: 3px solid #5bcba7;
-    color: #5bcba7;
-    border-radius: 5px;
-    padding: 7px 20px;
-    background-color: transparent;
-    font-weight: bold ;
-}
-
-button#lang:hover {
-    background-color: #050a30;
-    color: #ffffff;
-    cursor: pointer;
-}
-
-::selection {
-    background-color: #5bcba7;
-}
-
-footer{
-    width: 100%;
-    margin-top: 100px;
-    padding: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #050a30;
-    color: #ffffff;
-}
-
-footer span{
-    text-decoration-line: underline;
-}
-
-footer span:hover{
-    text-decoration-line: none;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23453886' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-    background-position: bottom;
-    background-repeat: repeat-x;
-    background-size: 30%;
-    padding-bottom: .25em;
-}
-
-.contact{
-    margin: 30px auto 60px;
-    width: 320px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.contact a{
-	width: 60px;
-	height: 60px;
-    border-radius: 50%;
-	display: inline-flex;
-    justify-content: center;
-    align-items: center;
-	background: #5bcba7;
-}
-
-.contact img{
-    width: 35px;
-    height:35px;
-}
-
-.contact a:hover{
-    background-color: bisque;
-    transform: scale(1.3);
-    transition: all 0.3s ease;
-}
+@import "config.css";
+@import "about-projects.css";
 
 .container{
     padding-top: 30vh;
@@ -177,11 +15,8 @@ footer span:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.text div{
     text-align: center;
-}  
+}
 
 .icones{
     display: flex;
@@ -283,7 +118,6 @@ body > h1 span{padding: 1px 14px;
     color: #fafafa;
 }
 
-
 @media only screen and (min-width: 1600px) {
 
     .text div h1{
@@ -320,31 +154,6 @@ body > h1 span{padding: 1px 14px;
 
 @media only screen and (max-width: 870px) {
 
-    header{
-        padding-top: 0px;
-        background-color: #5bcba7;
-        display: block;
-        height: 7vh;
-    }
-
-    #menu{
-        height: 20px;
-        margin-right: 30px;
-        width: auto;
-        display: block;
-    }
-
-    .headerMobile #logo{
-        display: none;
-    }
-
-    .headerMobile #logo-noir{
-        display: block;
-        height: 50%;
-        width: auto;
-        margin-left: 12px;
-    }
-
     .container {
         height: auto;
         padding-bottom: 100px;
@@ -357,26 +166,6 @@ body > h1 span{padding: 1px 14px;
     .icones img {
         width: 60px;
         margin-top: 50px;
-    }
-
-    .headerMobile{
-        background-color: #5bcba7;
-        height: 7vh;
-    }
-
-    button#lang:hover {
-        border: 3px solid #5bcba7;
-        color: #5bcba7;
-    }
-
-    .canou a {
-        color: #5bcba7;
-        font-size: 25px;
-        font-weight: bold;
-    }
-
-    .navbarMask{
-        display: none;
     }
 }
 
@@ -409,45 +198,7 @@ body > h1 span{padding: 1px 14px;
         row-gap: 5px;
     }
 
-    .headerMobile #logo-noir{
-        height: 50%;
-        margin-left: 12px;
-    }
-
     body > h1 {
         font-size: 30px;
-    }
-
-    footer{
-        width: 100%;
-        margin-top: 100px;
-        padding: 50px;
-    }
-    
-    .contact{
-        width: 80%;
-    }
-
-    .contact a{
-        width: 45px;
-        height: 45px;
-    }
- 
-    .contact a img{
-        width: 30px;
-        height: 30px;
-    }
-}
-
-@media only screen and (max-width: 290px) {
-
-    .container{
-        height: 150vh;
-        width: 135vw;
-    }
-
-    .canou{
-        width: 150vw;
-        height: 130vh;
     }
 }
