--- a/css/index.css
+++ b/css/index.css
@@ -263,6 +263,19 @@ header{
         animation: none;
     }
 
+    .canou{
+        width: 100vw;
+        height: 93vh;
+        padding: 25% 0 0 0;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        row-gap: 35px;
+        background-color: #050a30;
+    }
+    
     .navbar a {
         color: #5bcba7;
     }
