--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -14,7 +14,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
     width: 100%;
     max-width: 700px;
     height: 100%;
@@ -23,6 +22,15 @@
 
 /* Mobile */
 @media (max-width: 700px) {
+  .main {
+    .content {
+      padding: 25px;
+    }
+
+    .container {
+      gap: 0px;
+    }
+  }
 }
 
 /* Tablet and Smaller Desktop */
