--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,14 +1,14 @@
-.container {
+.desktop {
   width: 100%;
   display: flex;
   justify-content: space-between;
   padding: 70px 50px 0;
 }
 
-.name {
-  font-size: 20px;
-  color: var(--primary);
+.mobile {
+  display: none;
 }
+
 .social {
   display: flex;
   gap: 10px;
@@ -23,5 +23,40 @@
       height: 20px;
       margin: 5px;
     }
+  }
+}
+
+/* Mobile */
+@media (max-width: 700px) {
+  .desktop {
+    justify-content: center;
+    padding: 20px 0;
+    background-color: #212121;
+    margin-bottom: 30px;
+  }
+
+  .mobile {
+    display: none;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 30px;
+
+    .photo {
+      width: 50px;
+      height: 50px;
+      position: relative;
+      border-radius: 50%;
+      overflow: hidden;
+    }
+
+    .photoCart {
+      transform: scale(1.3) translateX(-1px);
+    }
+  }
+
+  .social {
+    display: none;
   }
 }
