--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -29,6 +29,7 @@
     border-radius: 5%;
     margin-right: 10px;
     margin-bottom: 10px;
+    cursor: pointer;
   }
   .content {
     margin-left: 70px;
